--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset= "utf-8" >
         <title>Starta - Läxhjälpen</title>
             <link rel= "stylesheet" href= "css/laxhjalpen.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
         </head>
     
   <body class="startpage">
@@ -37,3 +40,4 @@
 
   <footer>@ Kasper Lundberg äger</footer>
 </body>
+
